--- a/src/PD/SiteBundle/Resources/views/base.html.twig
+++ b/src/PD/SiteBundle/Resources/views/base.html.twig
@@ -23,7 +23,15 @@
                         <li><a href="{{path('fos_user_security_login')}}">Σύνδεση</a></li>
                         <li class="active"><a href="{{path('fos_user_registration_register')}}">Εγγραφή</a></li>
                     {% else %}
-                        <li><p class="navbar-text">Είσαι συνδεδεμένος ως: <a href="{{path('fos_user_profile_show')}}">{{app.user.username}}</a> (<a href="{{path('fos_user_security_logout')}}">Αποσύνδεση</a>)</p></li>
+                        <li><p class="navbar-text">Είσαι συνδεδεμένος ως:</p></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{app.user.username}} <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{path('dog_edit')}}">Ο σκύλος μου</a></li>
+                                <li><a href="{{path('fos_user_profile_edit')}}">Ο λογαριασμός μου</a></li>
+                                <li><a href="{{path('fos_user_security_logout')}}">Αποσύνδεση</a></li>
+                            </ul>
+                        </li>
                     {% endif %}
                 </ul>
             </div><!--/.nav-collapse -->
