--- a/src/PD/SiteBundle/Resources/views/Dog/edit.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/edit.html.twig
@@ -9,6 +9,8 @@
         <div class="span6">
             {% if form.vars.data.photoWebPath != null %}
                 <img src="{{image(form.vars.data.photoWebPath).zoomCrop(500, 285).png()}}" alt="profile pic" />
+            {% else %}
+                <img src="http://placehold.it/500x285" alt="profile pic" />
             {% endif %}
             <h5>Φωτογραφία Σκύλου</h5>
             <p style="font-size: 12px;">Μια καθαρή φωτογραφία αυξάνει τις πιθανότητες να επικοινωνήσουν οι άλλοι χρήστες μαζί σου</p>
