--- a/src/PD/SiteBundle/Resources/views/Default/index.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Default/index.html.twig
@@ -50,7 +50,7 @@
                 <div class="row well text-center" style="margin-left:0px">
                     <h3>Έχεις σκύλο;</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-                    <a href="#" class="btn btn-large btn-primary">Γίνε μέλος</a>
+                    <a href="{{path('fos_user_registration_register')}}" class="btn btn-large btn-primary{% if is_granted('ROLE_USER') %}  disabled {% endif %}">Γίνε μέλος</a>
                 </div>
                 <div class="row well text-center" style="margin-left:0px">
                     <table style="width: 100%; height: 40px;">
