--- a/src/PD/UserBundle/Resources/views/Profile/show.html.twig
+++ b/src/PD/UserBundle/Resources/views/Profile/show.html.twig
@@ -4,10 +4,20 @@
     <div class="row">
         <h3>Προφίλ Σκύλου</h3>
     </div>
+    {% if user.dog != null %}
+        {% set dog = user.dog %}
+        {{block('dog_show')}}
+    {% else %}
+        Ο χρήστης δεν έχει σκύλο
+    {% endif %}
+{% endblock %}
+
+{% block dog_show %}
+    {% set dog = user.dog %}
     <div class="row-fluid">
         <div class="span9 well">
-            <p><strong>soutzoukompouloukos</strong>, Bulldog, Αρσενικό</p>
-            <p>Σκόκου, Αθήνα, 11255, Αττική</p>
+            <p><strong>{{dog.name}}</strong>, {{dog.breed.name}}, {{dog.genderAsString}}</p>
+            <p>{{dog.user.address}}</p>
         </div>
         <div class="span3 well">
             <p>FB</p>
@@ -15,20 +25,22 @@
         </div>
     </div>
     <div class="row-fluid">
+        {% if dog.photoWebPath != null %}
         <div class="span9 well text-center">
-            <img src="http://placehold.it/700x400" alt="photo" />
+            <img src="{{asset(dog.photoWebPath)}}" style="width: 700px; height: 400px" alt="photo" />
         </div>
+        {% endif %}
         <div class="span3 well">
             <table class="table table-bordered">
-                <tr><td>Χρώμα</td><td>Καφέ</td></tr>
-                <tr><td>Έτος γέννησης</td><td>2010</td></tr>
+                <tr><td>Χρώμα</td><td>{{dog.color.name}}</td></tr>
+                <tr><td>Έτος γέννησης</td><td>{{dog.birthyear|date('Y')}}</td></tr>
             </table>
             <h5>Εμβόλια</h5>
-            <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur</p>
+            <p style="font-size: 12px;">{{dog.vaccinations}}</p>
             <h5>Ιστορικό Ασθενειών</h5>
-            <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            <p style="font-size: 12px;">{{dog.diseases}}</p>
             <h5>Περιγραφή</h5>
-            <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p style="font-size: 12px;">{{dog.description}}</p>
             <p class="text-center"><a href="#" class="btn btn-large btn-primary" style="margin-top: 11px;">Επικοινώνησε</a></p>
         </div>
     </div>
