--- a/src/PD/SiteBundle/Resources/views/Search/search.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Search/search.html.twig
@@ -19,42 +19,17 @@
             </form>
         </div>
 
+        {% for dog in dogs %}
         <div class="row-fluid">
             <div class="span2">
-                <img src="http://placehold.it/140x100" />
+                <img src="{{asset(dog.photoWebPath)}}" style="height: 100px;" />
             </div>
             <div class="span10 well">
-                <p><strong>soutzoukompouloukos</strong>, Bulldog, Αρσενικό</p>
-                <p>Σκόκου, Αθήνα, 11255, Αττική</p>
+                <p><strong><a href="{{path('dog', {'dog': dog.id})}}">{{dog.name}}</a></strong>, {{dog.breed.name}}, {{dog.genderAsString}}</p>
+                <p>{{dog.user.address}}</p>
             </div>
         </div>
-        <div class="row-fluid">
-            <div class="span2">
-                <img src="http://placehold.it/140x100" />
-            </div>
-            <div class="span10 well">
-                <p><strong>Λάρα</strong>, Γκριφόν, Θηλυκό</p>
-                <p>Λιβανάτες, 35007, Φθιώτιδα</p>
-            </div>
-        </div>
-        <div class="row-fluid">
-            <div class="span2">
-                <img src="http://placehold.it/140x100" />
-            </div>
-            <div class="span10 well">
-                <p><strong>Άρης</strong>, Λυκόσκυλο, Αρσενικό</p>
-                <p>Σπευσίππου, Κολωνάκι, 12934, Αττική</p>
-            </div>
-        </div>
-        <div class="row-fluid">
-            <div class="span2">
-                <img src="http://placehold.it/140x100" />
-            </div>
-            <div class="span10 well">
-                <p><strong>Άρης</strong>, Λυκόσκυλο, Αρσενικό</p>
-                <p>Σπευσίππου, Κολωνάκι, 12934, Αττική</p>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
