--- a/src/PD/SiteBundle/Resources/views/Default/index.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Default/index.html.twig
@@ -27,7 +27,7 @@
                     <img src="{{asset('images/counter.jpg')}}" style="width: 93px; height: 70px;" />
                 </div>
                     <h5>Προφίλ Σκύλων</h5>
-                <div class="row text-center">100</div>
+                <div class="row text-center">{{dogs|length}}</div>
             </div>
             <div class="span2 well">
                 <table style="width: 100%; height: 130px;">
@@ -44,7 +44,7 @@
             <div class="span8">
                 <div class="row well text-center" style="margin-left:0px">
                     <h3>Έχεις σκύλο;</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+                    <p>Μπες και εσύ στην κοινότητα και διάλεξε το κατάλληλο ταίρι για εκείνο!</p>
                     <a href="{{path('fos_user_registration_register')}}" class="btn btn-large btn-primary{% if is_granted('ROLE_USER') %}  disabled {% endif %}">Γίνε μέλος</a>
                 </div>
                 <div class="row well text-center" style="margin-left:0px">
@@ -63,31 +63,19 @@
                 </div>
             </div>
 
-            <div class="span4 well" style="padding-bottom: 0;">
-                <div class="row" style="padding-top: 10px; border-bottom: 1px solid #000">
-                    <div class="span8 offset1" style="border-right: 1px solid #000"><strong>Μάθε επίσης</strong></div>
-                    <div class="span3"><a href="#">Blog</a></div>
-                </div>
-                <div class="row" style="border-bottom: 1px solid #000">
-                    <div class="span11 offset1">
-                        <h5>Τίτλος</h5>
-                        <p>Περιγραφή...</p>
-                    </div>
-                </div>
-                <div class="row" style="border-bottom: 1px solid #000">
-                    <div class="span11 offset1">
-                        <h5>Τίτλος</h5>
-                        <p>Περιγραφή...</p>
-                    </div>
-                </div>
+            <div class="span4 well">
                 <div class="row">
-                    <div class="span11 offset1">
-                        <h5>Τίτλος</h5>
-                        <p>Περιγραφή...</p>
-                    </div>
+                    <div id="map_canvas" class="span11 offset1" style="height: 235px;"></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block foot_script %}
+    {{parent()}}
+    <script>
+        var dogs = {{dogs|serialize('json')|raw}};
+    </script>
 {% endblock %}
