--- a/src/PD/SiteBundle/Resources/views/base.html.twig
+++ b/src/PD/SiteBundle/Resources/views/base.html.twig
@@ -53,5 +53,6 @@
     </script>
     <script src="{{asset('js/common.js')}}"></script>
     <script src="{{asset('js/jquery.placesAutocomplete.js')}}"></script>
+    <script src="{{asset('js/jquery.searchMap.js')}}"></script>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&language={{app.request.locale}}&callback=googleMapsReadyFunc"></script>
 {% endblock %}
