--- a/src/PD/SiteBundle/Resources/views/Default/index.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Default/index.html.twig
@@ -33,7 +33,7 @@
                 <table style="width: 100%; height: 130px;">
                   <tr>
                      <td style="text-align: center; vertical-align: middle;">
-                          Facebook<BR />Like Box
+                          <div class="fb-like" data-href="http://www.dmstmedia.gr" data-send="false" data-layout="box_count" data-width="128" data-show-faces="true"></div>
                      </td>
                   </tr>
                 </table>
