--- a/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
@@ -9,9 +9,8 @@
             <p><strong>{{dog.name}}</strong>, {{dog.breed.name}}, {{dog.genderAsString}}</p>
             <p>{{dog.user.address}}</p>
         </div>
-        <div class="span3 well">
-            <p>FB</p>
-            <p>&nbsp;</p>
+        <div class="span3 well" style="padding: 14px; min-height: 100px;">
+            <div class="fb-like-box" data-href="https://www.facebook.com/FacebookDevelopers" data-width="128" data-height="60" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true"></div>
         </div>
     </div>
     <div class="row-fluid">
