Added contact form

--- a/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
@@ -16,7 +16,7 @@
     <div class="row-fluid">
         {% if dog.photoWebPath != null %}
         <div class="span9 well text-center">
-            <img src="{{asset(dog.photoWebPath)}}" style="width: 700px; height: 400px" alt="photo" />
+            <img src="{{asset(dog.photoWebPath)}}" style="height: 400px" alt="photo" />
         </div>
         {% endif %}
         <div class="span3 well">
