--- a/src/PD/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/PD/UserBundle/Resources/views/Security/login.html.twig
@@ -29,6 +29,9 @@
       <button type="submit" name="_submit" class="btn">Sign in</button>
     </div>
   </div>
+  {% if app.request.get('redirect') != null %}
+    <input type="hidden" name="_target_path" value="{{app.request.get('redirect')|url_decode}}" />
+  {% endif %}
   <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 </form>
 {% endblock content %}
