Added Facebook pages

--- a/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
@@ -10,7 +10,7 @@
             <p>{{dog.user.address}}</p>
         </div>
         <div class="span3 well text-center" style="padding: 14px; min-height: 100px; padding-top: 40px;">
-            <div class="fb-like" data-href="{{url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge(app.request.query.all()))}}" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true"></div>
+            <div class="fb-like" data-href="{{url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params'))}}" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true"></div>
         </div>
     </div>
     <div class="row-fluid">
