--- a/src/PD/SiteBundle/Resources/views/base.html.twig
+++ b/src/PD/SiteBundle/Resources/views/base.html.twig
@@ -1,24 +1,6 @@
 {% extends 'MopaBootstrapBundle::base.html.twig' %}
 
-{% block head %}
-<head>
-    <meta charset="UTF-8" />
-                <link href="/app_dev.php/css/5a72185_mopabootstrapbundle_1.css" type="text/css" rel="stylesheet" media="screen" />
-        <link href="/app_dev.php/css/5a72185_eyecon-bootstrap-datepicker_2.css" type="text/css" rel="stylesheet" media="screen" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-    <title>Pet Date</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <style>
-          body {
-            padding-top: 110px; /* 60px to make the container go all the way to the bottom of the topbar */
-            padding-left: 10%;
-            padding-right: 10%;
-          }
-          .navbar .container-fluid { padding-top: 10px; height: 50px; }
-    </style>
+{% block head_bottom %}
     <meta property="fb:app_id" content="346593462135851" />
     {% block fbmeta %}
         <meta property="og:title" content="Pet Date" />
@@ -27,7 +9,6 @@
         <meta property="og:url" content="{{url('home')}}" />
         {% block fbmeta_image %}<meta property="og:image" content="https://petdate.dnna.gr/images/logo.jpg" />{% endblock %}
     {% endblock fbmeta %}
-</head>
 {% endblock %}
 
 {% block navbar %}
