Logo fix for Facebook

--- a/src/PD/SiteBundle/Resources/views/base.html.twig
+++ b/src/PD/SiteBundle/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Έχεις σκύλο; Μπες και εσύ στην κοινότητα και διάλεξε το κατάλληλο ταίρι για εκείνο!" />
     <meta property="og:url" content="{{url('home')}}" />
-    {% block fbmeta_image %}<meta property="og:image" content="https://petdate.dnna.gr/images/logo.jpg" />{% endblock %}
+    {% block fbmeta_image %}<meta property="og:image" content="http://petdate.dnna.gr/images/logo.jpg" />{% endblock %}
 {% endblock fbmeta %}
 {% endblock %}
 
