--- a/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
 {% block fbmeta %}
-  <meta property="og:title" content="{{dog.name}}" />
+  <meta property="og:title" content="{{dog.name|trim}}" />
   <meta property="og:type" content="petdate:dog" />
-  <meta property="og:description" content="{{dog.breed.name}}, {{dog.genderAsString}}, {{dog.user.address}}" />
+  <meta property="og:description" content="{{dog.breed.name|trim}}, {{dog.genderAsString|trim}}, {{dog.user.address|trim}}" />
   <meta property="og:image" content="{{app.request.schemeAndHttpHost}}{{asset(dog.photoWebPath)}}" />
   <meta property="og:url" content="{{url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params'))}}" />
 {% endblock %}
