--- a/src/PD/SiteBundle/Resources/views/Dog/edit.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/edit.html.twig
@@ -1,24 +1,34 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
-{% block fbmeta %}
-  <meta property="og:title" content="{{dog.name|trim}}" />
-  <meta property="og:type" content="petdate:dog" />
-  <meta property="og:description" content="{{dog.breed.name|trim}}, {{dog.genderAsString|trim}}, {{dog.user.address|trim}}" />
-  <meta property="og:image" content="{{app.request.schemeAndHttpHost}}{{asset(dog.photoWebPath)}}" />
-  <meta property="og:url" content="{{url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params'))}}" />
-{% endblock %}
-
 {% block content %}
+<form action="{{ path('dog_edit') }}" {{ form_enctype(form) }} method="POST" class="dog_edit">
     <div class="row">
-        <h3>Προφίλ Σκύλου</h3>
+        <h3>Διαχείριση Προφίλ Σκύλου</h3>
     </div>
-    <div class="row-fluid">
-        <div class="span9 well">
-            <p><strong>{{dog.name}}</strong>, {{dog.breed.name}}, {{dog.genderAsString}}</p>
-            <p>{{dog.user.address}}</p>
+    <div class="row">
+        <div class="span6">
+            {% if form.vars.data.photoWebPath != null %}
+                <img src="{{image(form.vars.data.photoWebPath).zoomCrop(500, 285).png()}}" alt="profile pic" />
+            {% else %}
+                <img src="http://placehold.it/500x285" alt="profile pic" />
+            {% endif %}
+            <h5>Φωτογραφία Σκύλου</h5>
+            <p style="font-size: 12px;">Μια καθαρή φωτογραφία αυξάνει τις πιθανότητες να επικοινωνήσουν οι άλλοι χρήστες μαζί σου</p>
+            <p>{{ form_widget(form.photo) }}</p>
+            <p>{{ form_row(form.vaccinations, {'attr': {'class': 'span10', 'style': 'height: 80px;'}}) }}</p>
+            <p>{{ form_row(form.diseases, {'attr': {'class': 'span10', 'style': 'height: 80px;'}}) }}</p>
+            <p>{{ form_row(form.description, {'attr': {'class': 'span10', 'style': 'height: 80px;'}}) }}</p>
         </div>
-        <div class="span3 well text-center" style="padding: 14px; min-height: 100px; padding-top: 40px;">
-            <div class="fb-like" data-href="{{url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params'))}}" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true"></div>
+        <div class="span6">
+            <div style="display: none">
+                {{ form_widget(form.birthyear.day, {'value': '1'}) }}
+                {{ form_widget(form.birthyear.month, {'value': '1'}) }}
+            </div>
+            {{ form_rest(form) }}
+            <div>
+                <input type="submit" class="btn btn-primary" value="Υποβολή" />
+            </div>
         </div>
     </div>
+</form>
 {% endblock %}
