Added contact page

--- a/src/PD/SiteBundle/Resources/views/Default/index.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Default/index.html.twig
@@ -52,10 +52,10 @@
                       <tr>
                          <td style="text-align: center; vertical-align: middle;">
                             <ul class="inline">
-                                <li><a href="#">How it works</a></li>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Όροι χρήσης</a></li>
-                                <li><a href="#">Επικοινωνία</a></li>
+                                <li><a href="{{path('how_it_works')}}">Πως λειτουργεί</a></li>
+                                <li><a href="{{path('faq')}}">Συχνές Ερωτήσεις</a></li>
+                                <li><a href="{{path('terms')}}">Όροι χρήσης</a></li>
+                                <li><a href="{{path('contact')}}">Επικοινωνία</a></li>
                             </ul>
                          </td>
                       </tr>
