Added contact page

--- a/src/PD/SiteBundle/Resources/views/Footer/contact.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Footer/contact.html.twig
@@ -7,7 +7,7 @@
 
     <div class="row">
         <p>
-            Μπορείτε να μας βρείτε στο <a href="mailto:dnna@dnna.gr">dnna@dnna.gr</a> ή στο <a href="mailto:aflatht65@gmail.com">aflatht65@gmail.com</a>.
+            Μπορείτε να επικοινωνήσετε μαζί μας στο <a href="mailto:dnna@dnna.gr">dnna@dnna.gr</a>.
         </p>
     </div>
 {% endblock %}
