--- a/src/PD/SiteBundle/Resources/views/Default/index.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Default/index.html.twig
@@ -45,7 +45,11 @@
                 <div class="row well text-center" style="margin-left:0px">
                     <h3>Έχεις σκύλο;</h3>
                     <p>Μπες και εσύ στην κοινότητα και διάλεξε το κατάλληλο ταίρι για εκείνο!</p>
-                    <a href="{{path('fos_user_registration_register')}}" class="btn btn-large btn-primary{% if is_granted('ROLE_USER') %}  disabled {% endif %}">Γίνε μέλος</a>
+                    {% if is_granted('ROLE_USER') %}
+                        <button class="btn btn-large btn-primary">Γίνε μέλος</button>
+                    {% else %}
+                        <a href="{{path('fos_user_registration_register')}}" class="btn btn-large btn-primary">Γίνε μέλος</a>
+                    {% endif %}
                 </div>
                 <div class="row well text-center" style="margin-left:0px">
                     <table style="width: 100%; height: 40px;">
