--- a/src/PD/SiteBundle/Resources/views/Default/index.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Default/index.html.twig
@@ -46,7 +46,7 @@
                     <h3>Έχεις σκύλο;</h3>
                     <p>Μπες και εσύ στην κοινότητα και διάλεξε το κατάλληλο ταίρι για εκείνο!</p>
                     {% if is_granted('ROLE_USER') %}
-                        <button class="btn btn-large btn-primary">Γίνε μέλος</button>
+                        <button class="btn btn-large btn-primary disabled">Γίνε μέλος</button>
                     {% else %}
                         <a href="{{path('fos_user_registration_register')}}" class="btn btn-large btn-primary">Γίνε μέλος</a>
                     {% endif %}
@@ -81,5 +81,15 @@
     {{parent()}}
     <script>
         var dogs = {{dogs|serialize('json')|raw}};
+    </script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-41788379-1', 'dnna.gr');
+      ga('send', 'pageview');
+
     </script>
 {% endblock %}
