--- a/src/PD/SiteBundle/Resources/views/base.html.twig
+++ b/src/PD/SiteBundle/Resources/views/base.html.twig
@@ -83,4 +83,14 @@
     <script src="{{asset('js/jquery.placesAutocomplete.js')}}"></script>
     <script src="{{asset('js/jquery.searchMap.js')}}"></script>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&language={{app.request.locale}}&callback=googleMapsReadyFunc"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-41788379-1', 'dnna.gr');
+      ga('send', 'pageview');
+
+    </script>
 {% endblock %}
