--- a/src/PD/SiteBundle/Resources/views/Dog/contact.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/contact.html.twig
@@ -25,7 +25,11 @@
             <fieldset>
                     <legend>Φόρμα Επικοινωνίας</legend>
                     <div class="row text-center">
-                        <div class="span12">
+                        <div class="span6">
+                            {{form_row(form.location)}}
+                            {{form_row(form.puppies)}}
+                        </div>
+                        <div class="span6">
                             {{form_row(form.message)}}
                             <div>
                                 <input type="submit" class="btn btn-primary" value="Υποβολή" />
