Added unique titles to each page

--- a/src/PD/SiteBundle/Resources/views/Dog/contact.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/contact.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Επικοινωνία με ιδιοκτήτη | Pet Date{% endblock %}
+
 {% block content %}
     <div class="row">
         <h3>Επικοινωνία με ιδιοκτήτη</h3>
