--- a/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Προφίλ Σκύλου | Pet Date{% endblock %}
+
 {% block fbmeta %}
   <meta property="og:title" content="{{dog.name|trim}}" />
   <meta property="og:type" content="petdate:dog" />
