--- a/src/PD/SiteBundle/Resources/views/Footer/contact.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Footer/contact.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Επικοινωνία | Pet Date{% endblock %}
+
 {% block content %}
     <div class="row">
         <h3>Επικοινωνία</h3>
