--- a/src/PD/SiteBundle/Resources/views/Footer/faq.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Footer/faq.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Συχνές Ερωτήσεις | Pet Date{% endblock %}
+
 {% block content %}
     <div class="row">
         <h3>Συχνές Ερωτήσεις</h3>
