--- a/src/PD/SiteBundle/Resources/views/Footer/how_it_works.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Footer/how_it_works.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Πως λειτουργεί | Pet Date{% endblock %}
+
 {% block content %}
     <div class="row">
         <h3>Πως λειτουργεί</h3>
