--- a/src/PD/SiteBundle/Resources/views/Footer/terms.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Footer/terms.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Όροι Χρήσης | Pet Date{% endblock %}
+
 {% block content %}
     <div class="row">
         <h3>Όροι Χρήσης Ιστοτόπου Pet Date</h3>
