--- a/src/PD/SiteBundle/Resources/views/Search/search.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Search/search.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Αναζήτηση | Pet Date{% endblock %}
+
 {% block container %}
 <div class="{% block container_class %}container-fluid{% endblock container_class %}">
     <div class="content">
