--- a/src/PD/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/PD/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Εγγραφή | Pet Date{% endblock %}
+
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block content %}
