--- a/src/PD/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/PD/UserBundle/Resources/views/Security/login.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Σύνδεση | Pet Date{% endblock %}
+
 {% block content %}
 {% if error %}
     <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
