--- a/src/PD/UserBundle/Resources/views/Profile/show.html.twig
+++ b/src/PD/UserBundle/Resources/views/Profile/show.html.twig
@@ -1,5 +1,7 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
+{% block title %}Προφίλ Χρήστη | Pet Date{% endblock %}
+
 {% block content %}
 <p><a href="{{path('dog', {'dog': user.dog.id})}}">Προβολή προφίλ σκύλου</a></p>
 <p><a href="{{path('home')}}">Επιστροφή στην αρχική</a></p>
