Added unique titles to each page

--- a/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
+++ b/src/PD/SiteBundle/Resources/views/Dog/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'PDSiteBundle::base.html.twig' %}
 
-{% block title %}Προφίλ Σκύλου | Pet Date{% endblock %}
+{% block title %}{{dog.name|trim}} | Pet Date{% endblock %}
 
 {% block fbmeta %}
   <meta property="og:title" content="{{dog.name|trim}}" />
